--- a/webapp/view/layout/usernav.phtml
+++ b/webapp/view/layout/usernav.phtml
@@ -44,7 +44,7 @@ use ArmoredCore\WebObjects\URL;
                 <a class="nav-link" href="<?= URL::toRoute('home/index') ?>">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="<?= URL::toRoute('escala/ListarEscalas') ?>">Voos Disponiveis <span class="sr-only"></span></a>
+                <a class="nav-link" href="<?= URL::toRoute('voo/ListarVoos') ?>">Voos Disponiveis <span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="<?= URL::toRoute('passagemvenda/HistoricoPassagem') ?>">PassagensCompradas</a>
