--- a/webapp/view/voo/gestaoVoos.phtml
+++ b/webapp/view/voo/gestaoVoos.phtml
@@ -70,7 +70,7 @@ echo '<h1 style="margin-left: 40%">Voos Disponiveis</h1>';
                     if($_SESSION['perfil']==1)
                     {
 ?>
-                        <a href="<?= Url::toRoute('passagemvenda/pdfs')?>"><button class="btn btn-success">Comprar</button></a>
+                        <!--<a href="<?php//Url::toRoute('passagemvenda/store')?>"><button class="btn btn-success">Comprar</button></a>-->
 
 <?php
                     }
